; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_crypto_dh_derive_secret.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_crypto_dh_derive_secret.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_dh_derive_secret(i32 %0, i32* %1, i64 %2, i32* %3, i64 %4, i32* %5, i64 %6, i32* %7, i64 %8, i32* %9, i64* %10) #0 {
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i64, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i64*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32*, align 8
  %26 = alloca i64, align 8
  store i32 %0, i32* %13, align 4
  store i32* %1, i32** %14, align 8
  store i64 %2, i64* %15, align 8
  store i32* %3, i32** %16, align 8
  store i64 %4, i64* %17, align 8
  store i32* %5, i32** %18, align 8
  store i64 %6, i64* %19, align 8
  store i32* %7, i32** %20, align 8
  store i64 %8, i64* %21, align 8
  store i32* %9, i32** %22, align 8
  store i64* %10, i64** %23, align 8
  store i32 -1, i32* %24, align 4
  %27 = call i32* @os_malloc(i32 4)
  store i32* %27, i32** %25, align 8
  %28 = load i32*, i32** %25, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %31, label %30

30:                                               ; preds = %11
  store i32 -1, i32* %12, align 4
  br label %59

31:                                               ; preds = %11
  %32 = load i32*, i32** %25, align 8
  %33 = call i32 @wc_InitDhKey(i32* %32)
  %34 = load i32*, i32** %25, align 8
  %35 = load i32*, i32** %14, align 8
  %36 = load i64, i64* %15, align 8
  %37 = call i64 @wc_DhSetKey(i32* %34, i32* %35, i64 %36, i32* %13, i32 1)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %31
  br label %53

40:                                               ; preds = %31
  %41 = load i32*, i32** %25, align 8
  %42 = load i32*, i32** %22, align 8
  %43 = load i32*, i32** %18, align 8
  %44 = load i64, i64* %19, align 8
  %45 = load i32*, i32** %20, align 8
  %46 = load i64, i64* %21, align 8
  %47 = call i64 @wc_DhAgree(i32* %41, i32* %42, i64* %26, i32* %43, i64 %44, i32* %45, i64 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %40
  br label %53

50:                                               ; preds = %40
  %51 = load i64, i64* %26, align 8
  %52 = load i64*, i64** %23, align 8
  store i64 %51, i64* %52, align 8
  store i32 0, i32* %24, align 4
  br label %53

53:                                               ; preds = %50, %49, %39
  %54 = load i32*, i32** %25, align 8
  %55 = call i32 @wc_FreeDhKey(i32* %54)
  %56 = load i32*, i32** %25, align 8
  %57 = call i32 @os_free(i32* %56)
  %58 = load i32, i32* %24, align 4
  store i32 %58, i32* %12, align 4
  br label %59

59:                                               ; preds = %53, %30
  %60 = load i32, i32* %12, align 4
  ret i32 %60
}

declare dso_local i32* @os_malloc(i32) #1

declare dso_local i32 @wc_InitDhKey(i32*) #1

declare dso_local i64 @wc_DhSetKey(i32*, i32*, i64, i32*, i32) #1

declare dso_local i64 @wc_DhAgree(i32*, i32*, i64*, i32*, i64, i32*, i64) #1

declare dso_local i32 @wc_FreeDhKey(i32*) #1

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
